# laniakea-docs

./: .gitignore  README.md  clean-up-plan.md  synomics-overview.md
accounting/: capital-stack.md  distribution-rewards.md  duration-allocation.md  entity-fees.md  forecast-model.md  isolated-deployment.md  sdr-auction.md  settlement-cycle.md  treasury-management.md
core-concepts/: README.md  artifact-hierarchy.md  atlas-synome-separation.md  beacon-framework.md  binding-mechanics.md  cancer-logic.md  crystallization-interface.md  dreamer-actuator-split.md  emergence.md  five-layer-architecture.md  fractal-security-pattern.md  governance-window.md  human-merge.md  identity-through-momentum.md  language-intent.md  probabilistic-mesh.md  retrieval-policy.md  rogue-threat-model.md  stellar-husbandry.md  (+3 more)
inactive/pre-synlang/forecast_model/: dashboard.html  pyproject.toml  run_dashboard.py
inactive/pre-synlang/forecast_model/config/: extensions.yaml
inactive/pre-synlang/forecast_model/config/constants/: agents.yaml
inactive/pre-synlang/forecast_model/config/scenarios/: base_2026.yaml  example.yaml
inactive/pre-synlang/forecast_model/src/skyforecast/: cli.py
inactive/pre-synlang/forecast_model/src/skyforecast/core/: snapshots.py
inactive/pre-synlang/forecast_model/src/skyforecast/extensions/: genesis_capital.py  token_farming.py
inactive/pre-synlang/forecast_model/src/skyforecast/loaders/: __init__.py
inactive/pre-synlang/forecast_model/src/skyforecast/outputs/: __init__.py  markdown.py
inactive/pre-synlang/forecast_model/tests/: test_token_farming.py
(+466 files in other folders)
