[project]
name = "skyforecast"
version = "0.1.0"
description = "Sky protocol forecast model"
requires-python = ">=3.9"

dependencies = [
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "typer>=0.9",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff>=0.1",
]

[project.scripts]
skyforecast = "skyforecast.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/skyforecast"]

[tool.ruff]
line-length = 100
